--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@linaria/babel-preset": "^5.0.4",
     "@linaria/core": "^5.0.2",
     "@linaria/react": "^5.0.3",
     "@types/node": "20.9.0",
@@ -21,6 +20,7 @@
     "next-with-linaria": "^0.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "typescript": "5.2.2"
   }
 }
