--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-with-linaria": "^0.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
     "typescript": "5.2.2"
   }
