--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "@vercel/speed-insights": "^1.0.2",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
     "next": "14.0.2",
